--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>MIMESWEEP: Play Free! Minesweeper Revamped for Mobile & PC</title>
+  <title>MIMESWEEP: Play Free! Minesweeper, Revamped for Mobile!</title>
 
   <meta name="description" content="Play the popular puzzle game Minesweeper for free on your mobile phone or desktop. 
       Using smarts and strategy, clear the board without stepping on a mine!">
@@ -20,7 +20,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <meta property="og:title" content="Minesweeper Revamped for Mobile & PC" />
+  <meta property="og:title" content="Minesweeper, Revamped for Mobile!" />
   <meta property="og:description" content="Play the popular puzzle game Minesweeper for free on your mobile phone or desktop. 
     Using smarts and strategy, clear the board without stepping on a mine! " />
   <meta property="og:image" content="%PUBLIC_URL%/mimesweep_meta_image.png" />
