Update meta data image 2

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -23,9 +23,13 @@
   <meta property="og:title" content="Minesweeper, Revamped for Mobile!" />
   <meta property="og:description" content="Play the popular puzzle game Minesweeper for free on your mobile phone or desktop. 
     Using smarts and strategy, clear the board without stepping on a mine! " />
-  <meta property="og:image" content="%PUBLIC_URL%/mimesweep_meta_image.png" />
   <meta property="og:url" content="https://www.mimesweep.com/" />
   <meta property="og:type" content="games.plays" />
+  <meta property="og:image" content="%PUBLIC_URL%/mimesweep_meta_image.png" />
+  <meta property="og:image:url" content="%PUBLIC_URL%/mimesweep_meta_image.png" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
 </head>
 
