--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -25,16 +25,16 @@
     Using smarts and strategy, clear the board without stepping on a mine! " />
   <meta property="og:url" content="https://www.mimesweep.com/" />
   <meta property="og:type" content="games.plays" />
-  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweep_meta_image.png" />
-  <meta property="og:image:url" content="%PUBLIC_URL%/mimesweep_meta_image.png" />
+  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweepMetaImage.png" />
+  <meta property="og:image:url" content="%PUBLIC_URL%/mimesweepMetaImage.png" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweep_meta_image_small.png" />
-  <meta property="og:image:url" content="%PUBLIC_URL%/mimesweep_meta_image_small.png" />
+  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweepMetaImageSmall.png" />
+  <meta property="og:image:url" content="%PUBLIC_URL%/mimesweepMetaImageSmall.png" />
   <meta property="og:image:type" content="image/jpeg" />
-  <meta property="og:image:width" content="500" />
-  <meta property="og:image:height" content="500" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="400" />
 
 </head>
 
