Update meta data image 6

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -25,13 +25,13 @@
     Using smarts and strategy, clear the board without stepping on a mine! " />
   <meta property="og:url" content="https://www.mimesweep.com/" />
   <meta property="og:type" content="games.plays" />
-  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweepMetaImage.png" />
-  <meta property="og:image:url" content="%PUBLIC_URL%/mimesweepMetaImage.png" />
+  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweepMetaImage.jpg" />
+  <meta property="og:image:url" content="%PUBLIC_URL%/mimesweepMetaImage.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweepMetaImageSmall.png" />
-  <meta property="og:image:url" content="%PUBLIC_URL%/mimesweepMetaImageSmall.png" />
+  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweepMetaImageSmall.jpg" />
+  <meta property="og:image:url" content="%PUBLIC_URL%/mimesweepMetaImageSmall.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
