Trying to get image preview to show in WhatsApp

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -24,7 +24,7 @@
   <meta property="og:description" content="Play the popular puzzle game Minesweeper for free on your mobile phone or desktop. 
     Using smarts and strategy, clear the board without stepping on a mine! " />
   <meta property="og:url" content="https://www.mimesweep.com/" />
-  <meta property="og:type" content="games.plays" />
+  <meta property="og:type" content="website" />
   <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweepMetaImage.jpg" />
   <meta property="og:image:url" content="%PUBLIC_URL%/mimesweepMetaImage.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
