Trying to get image preview to show in WhatsApp 2

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -18,6 +18,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
 
+  <link itemprop="thumbnailUrl" href="%PUBLIC_URL%/mimesweepMetaImageSmall.jpg">
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <meta property="og:title" content="Minesweeper, Revamped for Mobile!" />
