Update meta description

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -3,10 +3,9 @@
 
 <head>
 
-  <title>MIMESWEEP: Play Free! Minesweeper, Revamped for Mobile!</title>
+  <title>MIMESWEEP: Play Free! Minesweeper, Online for Mobile!</title>
 
-  <meta name="description" content="Play the popular puzzle game Minesweeper for free on your mobile phone or desktop. 
-      Using smarts and strategy, clear the board without stepping on a mine!">
+  <meta name="description" content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!">
   <meta name="keywords"
     content="Minesweeper, Game, Puzzle, Strategy, Play, Free, Online, Mobile, Phone, Minesweep, Mine">
   <meta name="author" content="Sean Cox">
@@ -22,9 +21,8 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <meta property="og:title" content="Minesweeper, Revamped for Mobile!" />
-  <meta property="og:description" content="Play the popular puzzle game Minesweeper for free on your mobile phone or desktop. 
-    Using smarts and strategy, clear the board without stepping on a mine! " />
+  <meta property="og:title" content="Minesweeper, Online for Mobile!" />
+  <meta property="og:description" content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!" />
   <meta property="og:url" content="https://www.mimesweep.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/mimesweepMetaImage.jpg" />
