Change meta image, some tidy up

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -25,11 +25,16 @@
   <meta property="og:description" content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!" />
   <meta property="og:url" content="https://www.mimesweep.com/" />
   <meta property="og:type" content="website" />
+  <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImage.jpg" />
+  <meta property="og:image:url" content="https://www.mimesweep.com/mimesweepMetaImage.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImageSmall.jpg" />
   <meta property="og:image:url" content="https://www.mimesweep.com/mimesweepMetaImageSmall.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
-  <meta property="og:image:width" content="400" />
-  <meta property="og:image:height" content="400" />
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="600" />
 
 </head>
 
