Update App Title

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -3,11 +3,12 @@
 
 <head>
 
-  <title>MIMESWEEP: Play Free! Minesweeper, Online for Mobile!</title>
+  <title>MIMESWEEPER: Play Free! Minesweeper, Online for Mobile!</title>
 
-  <meta name="description" content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!">
+  <meta name="description"
+    content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!">
   <meta name="keywords"
-    content="Minesweeper, Game, Puzzle, Strategy, Play, Free, Online, Mobile, Phone, Minesweep, Mine">
+    content="Minesweeper, Mimesweeper, Game, Puzzle, Strategy, Play, Free, Online, Mobile, Phone, Desktop, Minesweep, Mine, Mime, Mimesweep">
   <meta name="author" content="Sean Cox">
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,7 +23,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <meta property="og:title" content="Minesweeper, Online for Mobile!" />
-  <meta property="og:description" content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!" />
+  <meta property="og:description"
+    content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!" />
   <meta property="og:url" content="https://www.mimesweep.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImage.jpg" />
