Change case for app title

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>MIMESWEEPER: Play Free! Minesweeper, Online for Mobile!</title>
+  <title>Mimesweeper: Play Free! Minesweeper, Online for Mobile!</title>
 
   <meta name="description"
     content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!">
