--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -32,11 +32,12 @@
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImageSmall.jpg" />
-  <meta property="og:image:url" content="https://www.mimesweep.com/mimesweepMetaImageSmall.jpg" />
-  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImageSmall.png" />
+  <meta property="og:image:url" content="https://www.mimesweep.com/mimesweepMetaImageSmall.png" />
+  <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="600" />
+  <meta name="author" content="Sean Patrick Cox">
 
 </head>
 
