--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -27,9 +27,9 @@
     content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!" />
   <meta property="og:url" content="https://www.mimesweep.com/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImage.jpg" />
-  <meta property="og:image:url" content="https://www.mimesweep.com/mimesweepMetaImage.jpg" />
-  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImage.png" />
+  <meta property="og:image:url" content="https://www.mimesweep.com/mimesweepMetaImage.png" />
+  <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImageSmall.png" />
