Update meta tags 4

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -37,6 +37,9 @@
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="600" />
+  <meta property="og:site_name" content="Mimesweep">
+  <meta name="twitter:image:alt" content="Game of mimesweep in progress">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="author" content="Sean Patrick Cox">
 
 </head>
