--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -24,7 +24,7 @@
 
   <meta property="og:title" content="Minesweeper, Online for Mobile!" />
   <meta property="og:description"
-    content="Play popular puzzle game Minesweeper online for free on your mobile phone or desktop. Using smarts and strategy, clear the board without stepping on a mine!" />
+    content="Play popular puzzle game Minesweeper online for free on mobile, tablet, or desktop. Using smarts and strategy, clear the board without stepping on a mine!" />
   <meta property="og:url" content="https://www.mimesweep.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImage.png" />
