update meta descriptions

--- a/mimesWeep/public/index.html
+++ b/mimesWeep/public/index.html
@@ -6,7 +6,7 @@
   <title>Mimesweep: Play Free! Minesweeper, Game for Mobile!</title>
 
   <meta name="description"
-    content="Play the popular puzzle game Minesweeper online for free on mobile and desktop devices. Using smarts and strategy, clear the board without stepping on a mine!">
+    content="Play the popular puzzle game Minesweeper online for free on mobile and desktop devices. Use strategy to clear the board without triggering a mine!">
   <meta name="keywords"
     content="Minesweeper, Mimesweeper, Game, Puzzle, Strategy, Play, Free, Online, Mobile, Phone, Desktop, Minesweep, Mine, Mime, Mimesweep">
   <meta name="author" content="Sean Cox">
@@ -24,7 +24,7 @@
 
   <meta property="og:title" content="Minesweeper, Online for Mobile!" />
   <meta property="og:description"
-    content="Play the popular puzzle game Minesweeper online for free on mobile and desktop devices. Using smarts and strategy, clear the board without stepping on a mine!" />
+    content="Play the popular puzzle game Minesweeper online for free on mobile and desktop devices. Use strategy to clear the board without triggering a mine!" />
   <meta property="og:url" content="https://www.mimesweep.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" itemprop="image" content="https://www.mimesweep.com/mimesweepMetaImage.png" />
